--- a/authors.html
+++ b/authors.html
@@ -21,21 +21,11 @@
     <h1>Authors on xdvl.info</h1></section>
 
         <section id="extras" class="body">
-                <div class="blogroll">
-                        <h2>blogroll</h2>
-                        <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
-                            <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                        </ul>
-                </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="http://github.com/dvl/">Github</a></li>
-                            <li><a href="http://last.fm/user/devil__">Last.fm</a></li>
-                            <li><a href="http://www.linkedin.com/in/andreluiz0112">LinkedIn</a></li>
+                            <li><a href="http://github.com/dvl">GitHub</a></li>
                             <li><a href="http://twitter.com/xdvl">Twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
