--- a/archives.html
+++ b/archives.html
@@ -14,12 +14,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">xdvl.info </a></h1>
                 <nav><ul>
+                    <li><a href="/category/geral.html">Geral</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for xdvl.info</h1>
 
 <dl>
+    <dt>Qua 12 março 2014</dt>
+    <dd><a href="/usando-o-sublime-text-3.html">Usando o Sublime Text 3</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
