--- a/authors.html
+++ b/authors.html
@@ -14,11 +14,13 @@
         <header id="banner" class="body">
                 <h1><a href="/">xdvl.info </a></h1>
                 <nav><ul>
+                    <li><a href="/category/geral.html">Geral</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on xdvl.info</h1></section>
+    <h1>Authors on xdvl.info</h1>        <li><a href="/author/andre-luiz.html">André Luiz</a> (1)</li>
+</section>
 
         <section id="extras" class="body">
                 <div class="social">
