--- a/tags.html
+++ b/tags.html
@@ -14,11 +14,14 @@
         <header id="banner" class="body">
                 <h1><a href="/">xdvl.info </a></h1>
                 <nav><ul>
+                    <li><a href="/category/geral.html">Geral</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for xdvl.info</h1></section>
+    <h1>Tags for xdvl.info</h1>        <li><a href="/tag/rascunhos.html">rascunhos</a> (1)</li>
+        <li><a href="/tag/sublimetext.html">sublimetext</a> (1)</li>
+</section>
 
         <section id="extras" class="body">
                 <div class="social">
