--- a/categories.html
+++ b/categories.html
@@ -14,9 +14,11 @@
         <header id="banner" class="body">
                 <h1><a href="/">xdvl.info </a></h1>
                 <nav><ul>
+                    <li><a href="/category/geral.html">Geral</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
+    <li><a href="/category/geral.html">Geral</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="social">
